[gd_scene load_steps=13 format=3 uid="uid://cs7if2w7onjat"]

[ext_resource type="Texture2D" uid="uid://bh40aithq647s" path="res://Player/Sprites/Player_Sprite.png" id="1_33j6v"]
[ext_resource type="Script" path="res://Combat/Scripts/combat_player.gd" id="1_fu1dw"]
[ext_resource type="Texture2D" uid="uid://cxfhtu2rhfxe7" path="res://Combat/Sprites/AttackBtnNormal.png" id="2_ym5j6"]
[ext_resource type="Texture2D" uid="uid://cuooroeenk2e2" path="res://Combat/Sprites/MagicBtnNormal.png" id="3_7f551"]
[ext_resource type="Texture2D" uid="uid://dmuparfgp0fyt" path="res://Combat/Sprites/ItemBtnNormal.png" id="4_sv5ce"]
[ext_resource type="FontFile" uid="uid://qwrn5esm1jyj" path="res://Fonts/VCR_OSD_MONO_1.001.ttf" id="5_tnfj7"]
[ext_resource type="Texture2D" uid="uid://cqw5ew6wwwetw" path="res://Combat/Sprites/HealthBarUnder.png" id="7_cjor4"]
[ext_resource type="PackedScene" uid="uid://b2kymrn7a6oyh" path="res://Combat/Scenes/CombatOption.tscn" id="7_tlpi1"]
[ext_resource type="Texture2D" uid="uid://bninowusnllcy" path="res://Combat/Sprites/HealthBarOver.png" id="8_1afax"]
[ext_resource type="Texture2D" uid="uid://bdse6jhhu63u6" path="res://Combat/Sprites/HealthBarProgress.png" id="9_qa10f"]

[sub_resource type="Theme" id="Theme_jh1xu"]
default_font = ExtResource("5_tnfj7")
default_font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_2m8yl"]
font = ExtResource("5_tnfj7")

[node name="CombatPlayer" type="TextureButton"]
offset_left = -12.0
offset_top = -16.0
offset_right = 12.0
offset_bottom = 16.0
texture_normal = ExtResource("1_33j6v")
script = ExtResource("1_fu1dw")

[node name="Actions" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AttackBtn" type="TextureButton" parent="Actions"]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = -32.0
offset_right = 40.0
offset_bottom = -12.0
texture_normal = ExtResource("2_ym5j6")
ignore_texture_size = true
stretch_mode = 0

[node name="MagicBtn" type="TextureButton" parent="Actions"]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_7f551")
ignore_texture_size = true
stretch_mode = 0

[node name="ItemBtn" type="TextureButton" parent="Actions"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.097
anchor_bottom = 0.097
offset_left = 20.0
offset_top = 12.0
offset_right = 40.0
offset_bottom = 32.0
grow_horizontal = 2
texture_normal = ExtResource("4_sv5ce")
ignore_texture_size = true
stretch_mode = 0

[node name="CombatMenu" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 62.0
offset_top = -64.0
offset_right = 222.0
offset_bottom = 96.0
theme = SubResource("Theme_jh1xu")
color = Color(0.237539, 0.237539, 0.237539, 1)

[node name="Title" type="Label" parent="CombatMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -48.0
offset_top = 4.0
offset_right = 48.0
offset_bottom = 20.0
grow_horizontal = 2
text = "Title:"
label_settings = SubResource("LabelSettings_2m8yl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Option1" parent="CombatMenu" instance=ExtResource("7_tlpi1")]
layout_mode = 1
anchor_left = 0.08125
anchor_top = 0.20625
anchor_right = 0.910416
anchor_bottom = 0.40625
offset_left = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1

[node name="Option2" parent="CombatMenu" instance=ExtResource("7_tlpi1")]
layout_mode = 1
anchor_left = 0.08125
anchor_top = 0.45
anchor_right = 0.910416
anchor_bottom = 0.65
offset_left = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1

[node name="Option3" parent="CombatMenu" instance=ExtResource("7_tlpi1")]
layout_mode = 1
anchor_left = 0.08125
anchor_top = 0.7
anchor_right = 0.910416
anchor_bottom = 0.9
offset_left = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1

[node name="AttackIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 62.0
offset_top = -13.0
offset_right = 72.0
offset_bottom = -3.0
rotation = 0.785398
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="MagicIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.03
anchor_right = 0.5
anchor_bottom = 0.171421
offset_left = 50.0
offset_top = 8.04
offset_right = 60.0
offset_bottom = 13.5145
rotation = 0.785398
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="ItemIndicator" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.391421
offset_left = 50.0
offset_top = 23.0
offset_right = 60.0
offset_bottom = 28.4745
rotation = 0.785398
color = Color(0.239216, 0.239216, 0.239216, 1)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = 18.0
offset_right = 18.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
max_value = 20.0
value = 7.0
nine_patch_stretch = true
texture_under = ExtResource("7_cjor4")
texture_over = ExtResource("8_1afax")
texture_progress = ExtResource("9_qa10f")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="Actions/AttackBtn" to="." method="_on_attack_btn_pressed"]
[connection signal="pressed" from="Actions/MagicBtn" to="." method="_on_magic_btn_pressed"]
[connection signal="pressed" from="Actions/ItemBtn" to="." method="_on_item_btn_pressed"]
